# RamBot

./: .gitignore  README.md  pyproject.toml  sample.env
ram_bot/: bot.py  trivia.py
tests/: test_ram_bot.py
